# dns

./: Cargo.toml  README.md  config.toml  install.sh
src/: blacklist.rs  config.rs  main.rs  query_log.rs  resolver.rs  server.rs
